@@ -179,7 +179,7 @@ SANITY_UNSUPPORTED=	USE_OPENAL USE_FAM USE_MAKESELF USE_ZIP USE_LHA USE_CMAKE \
 		USE_PYTHON_PREFIX USE_BZIP2 USE_XZ USE_PGSQL NEED_ROOT \
 		UNIQUENAME LATEST_LINK USE_SQLITE USE_FIREBIRD USE_PHPEXT \
 		USE_ZENDEXT USE_PHP_BUILD USE_BDB PLIST_DIRSTRY USE_RCORDER \
-		USE_OPENSSL
+		USE_OPENSSL WANT_GNOME
 SANITY_DEPRECATED=	PYTHON_PKGNAMESUFFIX USE_AUTOTOOLS \
 			USE_MYSQL WANT_MYSQL_VER \
 			USE_PHPIZE WANT_PHP_CLI WANT_PHP_CGI WANT_PHP_MOD \
@@ -239,6 +239,7 @@ WANT_PHP_MOD_ALT=	USES=php:mod
 WANT_PHP_WEB_ALT=	USES=php:web
 WANT_PHP_EMB_ALT=	USES=php:embed
 USE_RCORDER_ALT=	USE_RC_SUBR=${USE_RCORDER}
+WANT_GNOME_ALT=		USES=gnome
 
 .for a in ${SANITY_DEPRECATED}
 .if defined(${a})
